# rust-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  K6_RESULTS_GUIDE.md  LAMBDA_DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  k6-mqtt-pub-test.js  k6-performance-test-with-reports.js  k6-performance-test.js  run-performance-tests.sh  test-summary.json
.github/workflows/: deploy.yml
reports/: endpoint-coverage.json  performance-data.json  performance-report.html  performance-summary.txt
reports/comprehensive_20250629_214321/: raw-results.json
reports/demo_20250629_155400/: endpoint-coverage.json  performance-data.json  performance-summary.txt
src/: channel.rs  health.rs  lambda.rs  main.rs  mqtt.rs  user.rs
src/config/: db.rs
src/controller/: channel.rs  dynamodb_controller.rs  mod.rs  mqtt.rs  user.rs
src/model/: user.rs
src/performance_viewer/: mod.rs  models.rs  templates.rs
src/routes/: channel.rs  dynamodb.rs  mod.rs  mqtt.rs  user.rs
templates/: base.html  coverage.html  index.html  raw_data.html  report_detail.html  report_list.html
test-report/: endpoint-coverage.json  performance-data.json  performance-report.html  performance-summary.txt
tests/: lib.rs
tests/common/: mock_rabbitmq.rs  mod.rs  test_helpers.rs
tests/integration/: mod.rs
tests/unit/: mod.rs  mqtt_controller_test.rs  publisher_test.rs
