[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2.3"
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
futures-lite = "2.6.0"
# Performance report viewer dependencies
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }

# AWS Lambda dependencies
lambda_runtime = "0.8"
lambda_http = "0.8"
tokio-stream = "0.1"
bytes = "1.0"

[dev-dependencies]
aws-config = "1.1.7"
aws-sdk-lambda = "1.17.0"
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
fastrand = "2.0"
tower = "0.4"
anyhow = "1.0"
